@@ -13,6 +13,7 @@ in the space of maximum discrimination.
 \usage{
 \method{heplot}{candisc}(mod, which = 1:2, scale, asp = 1, var.col = "blue", 
     var.lwd = par("lwd"), var.cex=par("cex"), 
+    rev.axes=c(FALSE, FALSE),
     prefix = "Can", suffix = TRUE, terms = mod$term, ...)
 
 \method{heplot3d}{candisc}(mod, which = 1:3, scale, asp="iso", var.col = "blue", 
@@ -41,6 +42,8 @@ in the space of maximum discrimination.
   \item{var.col}{ Color for variable vectors and labels }
   \item{var.lwd}{ Line width for variable vectors }
   \item{var.cex}{ Text size for variable vector labels }
+  \item{rev.axes}{Logical, a vector of \code{length(which)}. \code{TRUE} causes the orientation of the canonical
+  scores and structure coefficients to be reversed along a given axis.}
   \item{prefix}{ Prefix for labels of canonical dimensions.}
   \item{suffix}{ Suffix for labels of canonical dimensions. If \code{suffix=TRUE}
   the percent of hypothesis (H) variance accounted for by each canonical dimension is added to the axis label.}
